# etradeTaxReturnHelper

./: .cargoignore  .gitignore  Cargo.toml  LICENCE  README.md  REUSE.toml  e-trade_tax_dividends.sh  kurs_dolara.sh  rust_decimal.natvis  tax_dividends.sh
.github/: FUNDING.yml
.github/workflows/: building.yaml  coverage.yaml  reuse-check.yml
.reuse/templates/: no_newline.jinja2
LICENSES/: LicenseRef-ETrade-MorganStanley.txt  LicenseRef-Private-Data.txt
anonymizer_data/: expected_detect_output.txt
data/: G&L_Collapsed.xlsx  G&L_Expanded.xlsx  G&L_Expanded_polish.xlsx  ecb_example_response.xml
revolut_data/: Revolut_21sie2023_27lis2023.csv  Revolut_30cze2023_27lis2023.csv  consolidated-eur-pln-crypto_2025.tsv  consolidated-eur_2024.csv  consolidated-statement-v2-eng.csv  consolidated-statement-v2-pol.csv  consolidated-statement_2024.csv  crypt.csv  eur_savings_2026-04-26.csv  revolut-savings-eng.csv  revolut_div.csv  trading-pnl-statement_2022-11-01_2024-09-01_pl-pl_e989f4.csv  trading-pnl-statement_2024-01-01_2024-08-04_pl-pl_8e8783.csv  trading-pnl-statement_2024-01-robo-2.csv  trading-pnl-statement_2024-01-robo.csv
scripts/: e-trade_tax_dividends.sh  nbp_script.sh
src/: .main.rs.swp  csvparser.rs  de.rs  ecb.rs  gui.rs  lib.rs  logging.rs  main.rs  nbp.rs  pdfparser.rs  pl.rs  transactions.rs  us.rs  xlsxparser.rs
src/anonymizer/: README.md  anonymizer.rs  detect.rs  list.rs  path.rs  pdf.rs  replace.rs
