[package]
name = "etradeTaxReturnHelper"
version = "0.2.2"
edition = "2021"
description = "Parses etrade financial documents for transaction details  (income, tax paid, cost basis) and compute total income and total tax paid according to chosen tax residency (currency)"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["etrade"]
repository = "https://github.com/jczaja/e-trade-tax-return-pl-helper"
homepage = "https://github.com/jczaja/e-trade-tax-return-pl-helper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = "0.7.2"
chrono = "0.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
syslog = "6.0.1"
log = "0.4.0"
clap = "~2.27.0"
regex = "1.3.3"
calamine = "0.18.0"
