# SPDX-FileCopyrightText: 2022-2025 RustInFinance
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "etradeTaxReturnHelper"
version = "0.7.4"
edition = "2021"
description = "Parses etrade and revolut financial documents for transaction details  (income, tax paid, cost basis) and compute total income and total tax paid according to chosen tax residency (currency)"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["etrade", "revolut"]
repository = "https://github.com/jczaja/e-trade-tax-return-pl-helper"
homepage = "https://github.com/jczaja/e-trade-tax-return-pl-helper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "etradeTaxReturnHelper"
path = "src/main.rs"

[[bin]]
name = "gen_exchange_rates"
path = "src/bin/gen_exchange_rates.rs"
required-features = ["gen_exchange_rates"]

[features]
default = ["gui"]
gui = ["fltk"]
gen_exchange_rates = ["serde_json"]

[dependencies]
pdf = "0.7.2"
chrono = "0.4"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
roxmltree = "0.20.0"
simple_logger = "4.0.0"
log = "0.4.0"
clap = "~2.27.0"
regex = "1.3.3"
calamine = "0.22.1"
wild = "2.2.0"
fltk = { version = "=1.3.24", features = ["fltk-bundled"], optional = true }
nom = "7.1.3"
polars = "0.35.4"
csv = "1.3.0"
serde_json = { version = "=1.0.133", optional = true }
holidays = { version = "0.1.0", default-features = false, features = ["PL"] }
